# jsonit

./: .rustfmt.toml  Cargo.toml  readme.md
src/: iterator.rs  lib.rs  reader.rs  test.json  utils.rs
tests/: simple.json  test.json  test_confuse.json  tests.rs
