[package]
name = "jsonit"
version = "0.2.0"
edition = "2021"
description = "Parse Json Items using iterators"
license = "Apache-2.0"
homepage = "https://github.com/Plawn/jsonit"


[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
fern = {version = "0.6.2", features = ["colored"]}
log = "0.4.20"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0.190"
serde_json = "1.0"
