[package]
name = "jsonit"
version = "0.2.6"
edition = "2021"
description = "Parse Json Items using iterators"
license = "Apache-2.0"
homepage = "https://github.com/Plawn/jsonit"


[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
chrono = "0.4.31"
fern = {version = "0.6.2", features = ["colored"]}
log = "0.4.20"