[package]
name = "jsonit"
version = "0.2.8"
edition = "2021"
description = "A way to parse Json Items using iterators from streams"
license = "Apache-2.0"
repository = "https://github.com/Plawn/jsonit"
authors = ["Plawn plawn.yay@gmail.com"]
keywords = ["stream", "json", "iterator", "serialization", "parsing"]
categories  ["encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
chrono = "0.4.31"
fern = {version = "0.6.2", features = ["colored"]}
log = "0.4.20"
